FIX 140116 do not overflow: hidden article's ul that are not for data (properties)

--- a/skins/default/output_properties.scss
+++ b/skins/default/output_properties.scss
@@ -97,7 +97,7 @@ article > form, article {
 		}
 	}
 
-	ul {
+	ul.data {
 		// allow li with float and clear
 		overflow: hidden;
 	}
